# CareSync

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: d8301f93155f_create_initial_schema.py
api/: index.py
app/: database.py  dependencies.py  main.py
app/core/: config.py  exception_handlers.py  exceptions.py  logging_config.py  security.py
app/domain/: enums.py  value_objects.py
app/models/: __init__.py  alert.py  base.py  caregiver.py  dose.py  medication.py  patient.py
app/repositories/: alert_repo.py  base_repository.py  caregiver_repo.py  dose_repo.py  medication_repo.py  patient_repo.py
app/routers/: auth.py  doses.py  medications.py  patients.py  reports.py
app/scheduler/: jobs.py  scheduler.py
app/schemas/: caregiver.py  dose.py  medication.py  patient.py
app/services/: alert_service.py  auth_service.py  dose_tracking_service.py  drug_interaction_service.py  medical_report_service.py  medication_enrollment_service.py  patient_service.py
scripts/: seed.py
tests/: conftest.py
tests/factories/: caregiver_factory.py  medication_factory.py  patient_factory.py
tests/integration/: test_auth_endpoints.py  test_dose_endpoints.py  test_medication_endpoints.py  test_misc_endpoints.py  test_patient_endpoints.py  test_report_endpoints.py  test_repositories.py
tests/unit/: test_alert_service.py  test_auth_service.py  test_database.py  test_dose_tracking_service.py  test_drug_interaction_service.py  test_exception_handlers.py  test_exceptions.py  test_medical_report_service.py  test_medication_enrollment_service.py  test_patient_service.py  test_scheduler_jobs.py  test_security.py  test_value_objects.py
