[project]
name = "caresync-api"
version = "0.1.0"
requires-python = ">=3.11"
description = "CareSync — Medication management system for elderly care homes"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.7.0",
    "psycopg2-binary>=2.9.0",
    "PyJWT>=2.10.0",
    "bcrypt>=4.0.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "fpdf2>=2.8.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "factory-boy>=3.3.1",
    "faker>=33.0.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "S", "C4", "RUF"]
ignore = [
    "S101",   # assert in tests
    "B008",   # Depends() in default args — standard FastAPI pattern
    "N818",   # AppException base class doesn't need Error suffix
    "S105",   # "bearer" token type string is not a password
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S107", "RUF012"]
"alembic/**/*.py" = ["E501", "I001", "UP007", "UP035"]
"scripts/**/*.py" = ["S105", "S106", "S107"]
"app/services/medical_report_service.py" = ["E501"]
"api/index.py" = ["E402", "F401"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/alembic/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
